# MxUserbot

./: .gitignore  README.md  pyproject.toml  sekai.db
docs/: dev.md  module-development.md  security.md  utils-reference.md
src/database/: __init__.py  __main__.py  methods.py
src/mxuserbot/: __init__.py  __main__.py
src/mxuserbot/core/: callback.py  loader.py  security.py  types.py  utils.py
src/mxuserbot/core/web/: index.html
src/mxuserbot/core/web/api/: locale.json  main.py
src/mxuserbot/core/web/static/js/: auth.js
src/mxuserbot/core/web/templates/: index.html
src/mxuserbot/modules/community/: catgirl.py  welcome.py
src/mxuserbot/modules/core/: help.py  loader.py  set_prefix.py  shell.py  sudo.py  v.py
src/userbot/: __main__.py  utils.txt.py
src/userbot/core/: bot.py  callback.py  init_client.py  loader.py  methods.py  security.py  types.py  utils.py
src/userbot/modules/: catgirl.py  hello.py  help.py
src/userbot/modules/core/: init_client.py  types.py
